examples/platform-mesh/portal/deploy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-header
  namespace: resource-broker-system
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
    - '*'
    accessControlAllowMethods:
    - GET
    - OPTIONS
    - POST
    accessControlAllowOriginList:
    - http://localhost:4200
    - http://localhost:4300
    - http://*.localhost:4200
    - http://*.localhost:4300
    - http://sub.localhost:4300
    - https://portal.localhost:8443
    - https://*.portal.localhost:8443
    accessControlMaxAge: 100
    addVaryHeader: true
