examples/platform-mesh/portal/deploy/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-portal-httproute
  namespace: resource-broker-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: platform-mesh-system
  to:
  - group: ""
    kind: Service
