examples/platform-mesh/portal/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-broker-portal
  namespace: resource-broker-system
  labels:
    app: resource-broker-portal
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: resource-broker-portal
