examples/platform-mesh/portal/deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resource-broker-portal
  namespace: platform-mesh-system
  labels:
    app: resource-broker-portal
spec:
  hostnames:
  - portal.localhost
  - "*.portal.localhost"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: k8sapi-gateway
    namespace: platform-mesh-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: resource-broker-portal
      namespace: resource-broker-system
      port: 8080
      weight: 1
    filters:
    - extensionRef:
        group: traefik.io
        kind: Middleware
        name: cors-header
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /resource-broker
